--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -36,7 +36,7 @@
       </div>
       <div class="content select-scenario" *ngIf="selectedView === 'processor_state'">
 
-        <p-table [value]="processorData.data" [paginator]="false" [rows]="15" [loading]="dataLoading"
+        <p-table [value]="toolConfigsDetails" [paginator]="false" [rows]="15" [loading]="dataLoading"
           styleClass="p-datatable-striped"  loadingIcon="loading-img" [autoLayout]="true">
 
           <ng-template pTemplate="caption">
@@ -77,31 +77,31 @@
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-processor let-expanded="expanded">
-            <tr *ngIf="showProcessorLastState(processor.processorName) !== 'NA'">
+            <tr>
               <td class='custom-table-cell'>
-                {{ processor.processorName === 'Azure' ? 'Azure Board' : processor.processorName }}
+                {{ processor.toolName === 'Azure' ? 'Azure Board' : processor.toolName }}
               </td>
 
               <td class='custom-table-cell'>
                 <span
-                  *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">{{
-                  showExecutionDate(processor.processorName) }}</span>
+                  *ngIf="(!findTraceLogForTool(processor.toolName)?.executionOngoing && processor.toolName === 'Jira') || processor.toolName !== 'Jira'">{{
+                  showExecutionDate(processor.toolName) }}</span>
               </td>
               <td class="custom-table-cell">
                 <p-progressBar mode="indeterminate"
-                  *ngIf="processor.processorName === 'Jira' && findTraceLogForTool(processor.processorName)?.executionOngoing === true "
+                  *ngIf="processor.toolName === 'Jira' && findTraceLogForTool(processor.toolName)?.executionOngoing === true "
                   [style]="{ height: '6px' }"></p-progressBar>
               </td>
               <td class='custom-table-cell'>
                 <div class="p-d-flex p-align-center">
-                  <div class="p-d-flex p-align-center" *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
-                    <div *ngIf="showProcessorLastState(processor.processorName) !== 'NA'" class="status-container"
-                      [ngClass]="showProcessorLastState(processor.processorName) === 'Success' ? 'active' : 'inactive'">
-                      {{ showProcessorLastState(processor.processorName)}}
+                  <div class="p-d-flex p-align-center" *ngIf="(!findTraceLogForTool(processor.toolName)?.executionOngoing && processor.toolName === 'Jira') || processor.toolName !== 'Jira'">
+                    <div *ngIf="showProcessorLastState(processor.toolName) !== 'NA'" class="status-container"
+                      [ngClass]="showProcessorLastState(processor.toolName) === 'Success' ? 'active' : 'inactive'">
+                      {{ showProcessorLastState(processor.toolName)}}
                     </div>
-                    <!-- <span *ngIf="showProcessorLastState(processor.processorName) === 'NA'">NA</span> -->
+                    <!-- <span *ngIf="showProcessorLastState(processor.toolName) === 'NA'">NA</span> -->
                   </div>
-                  <div class="p-ml-2" *ngIf="processor.processorName === 'Jira'">
+                  <div class="p-ml-2" *ngIf="processor.toolName === 'Jira'">
                     <i class="pi pi-info-circle"
                       [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
                       (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''"
@@ -110,13 +110,13 @@
                 </div>
               </td>
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
-                <button pButton pRipple label="Run Now"
-                  icon="{{findTraceLogForTool(processor.processorName)?.executionOngoing === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
-                  [disabled]="(shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true) && processor.processorName !== 'Jira'  "
+               <button pButton pRipple label="Run Now"
+                  icon="{{findTraceLogForTool(processor.toolName)?.executionOngoing === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
+                  [disabled]="(shouldDisableRunProcessor() || findTraceLogForTool(processor.toolName)?.executionOngoing === true) && processor.toolName !== 'Jira'  "
                   class="p-button-sm p-button-success p-button-raised"
-                  (click)="runProcessor(processor.processorName)"></button>
+                  (click)="runProcessor(processor.toolName)"></button>
                 <div class="action-btns p-ml-3"
-                  [ngClass]="{'disabled':!(getToolDetailsForProcessor(processor?.processorName)?.length > 0 && findTraceLogForTool(processor?.processorName)) || findTraceLogForTool(processor?.processorName)?.isDeleteDisable}"
+                  [ngClass]="{'disabled':!(getToolDetailsForProcessor(processor?.toolName)?.length > 0 && findTraceLogForTool(processor?.toolName)) || findTraceLogForTool(processor?.toolName)?.isDeleteDisable}"
                   *ngIf="!shouldDisableRunProcessor()"><i class="far fa-trash-alt"
                     (click)="deleteProcessorData(processor)"></i></div>
               </td>
